worker api update
